--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
     "url": "https://chongloubbt.github.io/my-twa",
     "name": "My TWA",
-    "iconUrl": "https://chongloubbt.github.io/my-twa/icon.png"
+    "iconUrl": "https://chongloubbt.github.io/my-twa/public/icon.png"
   }
